--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Ajax & JSON</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/jquery-ui-dist/jquery-ui.min.css">
   </head>
   <body>
     <div class="container">
@@ -13,6 +14,16 @@
                 <button class="btn btn-primary mx-auto d-block mb-4" id="getPeople">Get people</button>
             </div>
         </div>
+        <div class="row text-center mb-3">
+            <div class="col">
+                <p>
+                  <label for="age">Age Range:</label>
+
+                </p>
+                <p id="currentRange"></p>
+                <div id="ageRangeSlider"></div>
+            </div>
+        </div>
         <div id="peopleBox" class="row mb-2">
 
         </div>
@@ -20,8 +31,8 @@
 
 
 
-
     <script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <script src="node_modules/jquery-ui-dist/jquery-ui.min.js" charset="utf-8"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="node_modules/popper.js/dist/popper.min.js" charset="utf-8"></script>
     <script src="js/script.js" charset="utf-8"></script>
